# lotus

./: .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .talismanrc  .tarpaulin.toml  Cargo.toml  Dockerfile  README.md  build-static.sh  pre-commit-test.sh  renovate.json
.github/workflows/: ci.yml
logstash/: input.conf  logstash.yml  output.conf  pipelines.yml
logstash/config/: Dockerfile  logstash.yml
logstash/pipeline/: input.conf  output.conf
rules/: 00-dummy.conf
src/: assets.rs  collectors.rs  docker.rs  lib.rs  main.rs  runner.rs  server.rs  test_cases.rs
tests/: default_test_runner.rs  empty_json_object.rs
tests/dummy/: expected.json
