[package]
name = "lotus"
description = "Lotus Logstash Test Runner"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[lib]
name = "lotus"
path = "src/lib.rs"

[[bin]]
name = "lotus"
path = "src/main.rs"

[dependencies]
anyhow = "1"
assert-json-diff = "2"
axum = "0.6"
bollard = "0.14"
clap = { version = "4", features = ["derive"] }
directories = "5"
futures = "0.3"
futures-util = "0.3"
handlebars = { version = "4.3", features = ["rust-embed"] }
reqwest = { version = "0.11", features = ["json"] }
rust-embed = "6"
serde = "1"
serde_json = "1"
tar = "0.4"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
rstest = "0.18"
tempfile = "3"
