[package]
name = "lotus"
description = "Lotus Logstash Test Runner"
authors = ["Eleanor Young <developer@nausicaea.net>"]
version = "0.3.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "lotus"
path = "src/lib.rs"

[[bin]]
name = "lotus"
path = "src/main.rs"

[dependencies]
anyhow = "1"
assert-json-diff = "2"
axum = "0.6"
bollard = "0.15"
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
futures-util = "0.3"
handlebars = { version = "4.3", features = ["rust-embed"] }
reqwest = { version = "0.11", features = ["json"] }
rust-embed = "8"
serde = "1"
serde_json = "1"
tar = "0.4"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
