[package]
name = "lotus"
description = "Lotus Logstash Test Runner"
authors = ["Eleanor Young <developer@nausicaea.net>"]
version = "0.4.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "lotus"
path = "src/lib.rs"

[[bin]]
name = "lotus"
path = "src/main.rs"

[dependencies]
tempfile = "3"
anyhow = "1"
assert-json-diff = "2"
axum = "0.6"
bollard = "0.16"
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
futures-util = "0.3"
handlebars = { version = "5.0", features = ["rust-embed"] }
reqwest = { version = "0.12", features = ["json"] }
rust-embed = "8"
serde = "1"
serde_json = "1"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
test-log = { version = "0.2.15", features = ["tracing-subscriber"] }
